Prevent overlap of edit dropdown on hidden topics - Bootstrap theme fixes #324 and #389 - credit to Charles Fulton.

--- a/less/moodle/course.less
+++ b/less/moodle/course.less
@@ -252,7 +252,11 @@
             }
         }
         li.section.hidden {
-            .opacity(.5);
+            .sectionname > span,
+            .content > div,
+            .activity .activityinstance {
+                opacity: .5;
+            }
         }
     }
 }
